--- a/index.html
+++ b/index.html
@@ -135,12 +135,36 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img
-                src="./images/our-team/img-1.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/mobile/m-mark@1x.jpg 1x,
+                    ./images/our-team/mobile/m-mark@2x.jpg 2x
+                  "
+                  media="(max-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/tablet/t-mark@1x.jpg 1x,
+                    ./images/our-team/tablet/t-mark@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/pc/pc-mark@1x.jpg 1x,
+                    ./images/our-team/pc/pc-mark@2.jpg  2x
+                  "
+                  media="(min-width:1440px)"
+                />
+                <img
+                  src="./images/our-team/mobile/m-mark@1x.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -177,12 +201,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/our-team/img-2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/pc/pc-tom@1x.jpg 1x,
+                    ./images/our-team/pc/pc-tom@2x.jpg 2x
+                  "
+                  media="(min-width:1440px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/tablet/t-tom@1x.jpg 1x,
+                    ./images/our-team/tablet/t-tom@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/mobile/m-tom@1x.jpg 1x,
+                    ./images/our-team/mobile/m-tom@2x.jpg 2x
+                  "
+                  media="(max-width:768px)"
+                />
+                <img
+                  src="./images/our-team/mobile/m-tom@1x.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -219,12 +267,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/our-team/img-3.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/pc/pc-camila@1x.jpg 1x,
+                    ./images/our-team/pc/pc-camila@2x.jpg 2x
+                  "
+                  media="(min-width:1440px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/tablet/t-camila@1x.jpg 1x,
+                    ./images/our-team/tablet/t-camila@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/mobile/m-camila@1x.jpg 1x,
+                    ./images/our-team/mobile/m-camila@2x.jpg 2x
+                  "
+                  media="(max-width:768px)"
+                />
+                <img
+                  src="./images/our-team/mobile/m-camila@1x.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -261,12 +333,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/our-team/img-4.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/pc/pc-dan@1x.jpg 1x,
+                    ./images/our-team/pc/pc-dan@2x.jpg 2x
+                  "
+                  media="(min-width:1440px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/tablet/t-dan@1x.jpg 1x,
+                    ./images/our-team/tablet/t-dan@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/mobile/m-dan@1x.jpg 1x,
+                    ./images/our-team/mobile/m-dan@2x.jpg 2x
+                  "
+                  media="(max-width:768px)"
+                />
+                <img
+                  src="./images/our-team/mobile/m-dan@1x.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
@@ -313,12 +409,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-bank@1x.jpg 1x,
+                      ./images/portfolio/pc/pc-bank@2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-bank@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-bank@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-bank@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-bank@2x.jpg 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-bank@1x.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -332,12 +452,36 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-cash@1x.jpg 1x,
+                      ./images/portfolio/pc/pc-cash@2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-cash@1/jpg 1x,
+                      ./images/portfolio/tablet/t-cash@2/jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-cash@1/jpg 1x,
+                      ./images/portfolio/mobile/m-cash@2/jpg 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-cash@1x.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -351,12 +495,36 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-med@1.jpg 1x,
+                      ./images/portfolio/pc/pc-med@2.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-med@1.jpg 1x,
+                      ./images/portfolio/tablet/t-med@2.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-med@1.jpg 1x,
+                      ./images/portfolio/mobile/m-med@2.jpg 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-med@1x.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -370,12 +538,36 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-taxi@1x.jpg 1x,
+                      ./images/portfolio/pc/p-taxi@2x.jpg  2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-taxi@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-taxi@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-taxi@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-taxi@2x.jpg 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-taxi@1x.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -389,12 +581,36 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-ill@1.jpg 1x,
+                      ./images/portfolio/pc/pc-ill@2.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-ill@1.jpg 1x,
+                      ./images/portfolio/tablet/t-ill@2.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-ill@1.jpg 1x,
+                      ./images/portfolio/mobile/m-ill@2.jpg 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-ill@1x.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -408,12 +624,36 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-owerlay-container">
-                <img
-                  src="./images/portfolio/img-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/pc/pc-online@1 1x,
+                      ./images/portfolio/pc/pc-online@2 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/t-online@1 1x,
+                      ./images/portfolio/tablet/t-online@2 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/m-online@1 1x,
+                      ./images/portfolio/mobile/m-online@2 2x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    src="./images/portfolio/mobile/m-online@1x.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-owerlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -499,7 +739,7 @@
     </footer>
     <!-- #endregion -->
     <!-- #region modal-overlay -->
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="modal-button" type="button">
           <svg class="modal-button-icon" width="8" height="8">
@@ -591,7 +831,72 @@
     </div>
     <!-- #endregion -->
     <!-- #region menu-overlay -->
-    <div class="modal-menu-overlay">div.modal</div>
+    <div class="modal-menu-overlay">
+      <div class="modal-menu">
+        <button class="modal-button" type="button">
+          <svg class="modal-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#vector-x"></use>
+          </svg>
+        </button>
+        <nav class="modal-menu-nav">
+          <ul class="modal-menu-list">
+            <li class="modal-menu-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="modal-menu-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="modal-menu-item">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="modal-menu-address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="modal-menu-social">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
+    </div>
     <!-- #endregion -->
   </body>
 </html>
