--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <source
                   srcset="
                     ./images/our-team/pc/pc-mark@1x.jpg 1x,
-                    ./images/our-team/pc/pc-mark@2.jpg  2x
+                    ./images/our-team/pc/pc-mark@2x.jpg 2x
                   "
                   media="(min-width:1440px)"
                 />
@@ -415,7 +415,7 @@
                       ./images/portfolio/pc/pc-bank@1x.jpg 1x,
                       ./images/portfolio/pc/pc-bank@2x.jpg 2x
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
@@ -456,21 +456,21 @@
                   <source
                     srcset="
                       ./images/portfolio/pc/pc-cash@1x.jpg 1x,
-                      ./images/portfolio/pc/pc-cash@2x.jpg 2x
+                      ./images/portfolio/pc/pc-cash@2x.jpg 2
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/tablet/t-cash@1/jpg 1x,
-                      ./images/portfolio/tablet/t-cash@2/jpg 2x
+                      ./images/portfolio/tablet/t-cash@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-cash@2x.jpg 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/mobile/m-cash@1/jpg 1x,
-                      ./images/portfolio/mobile/m-cash@2/jpg 2x
+                      ./images/portfolio/mobile/m-cash@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-cash@2x.jpg 2x
                     "
                     media="(max-width:768px)"
                   />
@@ -498,22 +498,22 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/portfolio/pc/pc-med@1.jpg 1x,
-                      ./images/portfolio/pc/pc-med@2.jpg 2x
+                      ./images/portfolio/pc/pc-med@1x.jpg 1x,
+                      ./images/portfolio/pc/pc-med@2x.jpg 2x
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/tablet/t-med@1.jpg 1x,
-                      ./images/portfolio/tablet/t-med@2.jpg 2x
+                      ./images/portfolio/tablet/t-med@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-med@2x.jpg 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/mobile/m-med@1.jpg 1x,
-                      ./images/portfolio/mobile/m-med@2.jpg 2x
+                      ./images/portfolio/mobile/m-med@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-med@2x.jpg 2x
                     "
                     media="(max-width:768px)"
                   />
@@ -544,7 +544,7 @@
                       ./images/portfolio/pc/pc-taxi@1x.jpg 1x,
                       ./images/portfolio/pc/p-taxi@2x.jpg  2x
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
@@ -584,22 +584,22 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/portfolio/pc/pc-ill@1.jpg 1x,
-                      ./images/portfolio/pc/pc-ill@2.jpg 2x
+                      ./images/portfolio/pc/pc-ill@1x.jpg 1x,
+                      ./images/portfolio/pc/pc-ill@2x.jpg 2x
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/tablet/t-ill@1.jpg 1x,
-                      ./images/portfolio/tablet/t-ill@2.jpg 2x
+                      ./images/portfolio/tablet/t-ill@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-ill@2x.jpg 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/mobile/m-ill@1.jpg 1x,
-                      ./images/portfolio/mobile/m-ill@2.jpg 2x
+                      ./images/portfolio/mobile/m-ill@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-ill@2x.jpg 2x
                     "
                     media="(max-width:768px)"
                   />
@@ -627,22 +627,22 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/portfolio/pc/pc-online@1 1x,
-                      ./images/portfolio/pc/pc-online@2 2x
+                      ./images/portfolio/pc/pc-online@1x 1x,
+                      ./images/portfolio/pc/pc-online@2x 2x
                     "
-                    media="(min-width:1158px)"
+                    media="(min-width:1440px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/tablet/t-online@1 1x,
-                      ./images/portfolio/tablet/t-online@2 2x
+                      ./images/portfolio/tablet/t-online@1x 1x,
+                      ./images/portfolio/tablet/t-online@2x 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/mobile/m-online@1 1x,
-                      ./images/portfolio/mobile/m-online@2 2x
+                      ./images/portfolio/mobile/m-online@1x 1x,
+                      ./images/portfolio/mobile/m-online@2x 2x
                     "
                     media="(max-width:768px)"
                   />
