--- a/index.html
+++ b/index.html
@@ -627,22 +627,22 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/portfolio/pc/pc-online@1x 1x,
-                      ./images/portfolio/pc/pc-online@2x 2x
+                      ./images/portfolio/pc/pc-online@1x.jpg 1x,
+                      ./images/portfolio/pc/pc-online@2x.jpg 2x
                     "
                     media="(min-width:1440px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/tablet/t-online@1x 1x,
-                      ./images/portfolio/tablet/t-online@2x 2x
+                      ./images/portfolio/tablet/t-online@1x.jpg 1x,
+                      ./images/portfolio/tablet/t-online@2x.jpg 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/portfolio/mobile/m-online@1x 1x,
-                      ./images/portfolio/mobile/m-online@2x 2x
+                      ./images/portfolio/mobile/m-online@1x.jpg 1x,
+                      ./images/portfolio/mobile/m-online@2x.jpg 2x
                     "
                     media="(max-width:768px)"
                   />
